retail-banking-app-istio/account.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: account-svc
  namespace: retail-banking-team
spec:
  selector:
    app: account-svc
  ports:
    - port: 8082
      targetPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-svc
  namespace: retail-banking-team
  labels:
    app: account-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-svc
  template:
    metadata:
      labels:
        app: account-svc
    spec:
      serviceAccountName: account-svc
      containers:
        - name: account-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9092
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
