retail-banking-app-istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: retail-banking-istio-igw

spec:
  selector:
    app: istio-ingressgateway

  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - retail-banking.example.com

    # - port:
    #     number: 443
    #     name: https
    #     protocol: HTTPS

    #   tls:
    #     mode: SIMPLE
    #     credentialName: retail-banking-credential

      # hosts:
      #   - retail-banking.example.com
